[package]
name = "pingmon"
version = "0.1.0"
authors = ["David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.1"
log = "0.4.11"
pnet = "0.26"
pnet_macros_support = "0.26"
rand = "0.7"
