[package]
name = "zzping-daemon"
version = "0.2.2-beta1"
authors = ["Google LLC", "David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2018"

[dependencies]
zzping-lib = { path = "../zzping-lib" }
env_logger = "0.9.0"
log = "0.4.14"
pnet = "0.28.0"
pnet_macros_support = "0.28.0"
rand = "0.8.4"
rmp = "0.8.10"
ron = "0.6.4"
clap = { version = "3.1.18", features = ["derive"] }
serde = "1.0.127"
chrono = "0.4.19"
tempfile = "3.2"

