[package]
name = "zzping-daemon"
version = "0.2.2-beta2"
authors = ["Google LLC", "David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2018"

[dependencies]
zzping-lib = { path = "../zzping-lib" }
env_logger = "0.9"
log = "0.4"
pnet = "0.31"
pnet_transport = "0.31"
pnet_macros_support = "0.31"
rand = "0.8"
rmp = "0.8"
ron = "0.7"
clap = { version = "3.1", features = ["derive"] }
serde = "1.0"
chrono = "0.4"
tempfile = "3.2"

