[package]
name = "zzping-gui"
version = "0.2.2-beta2"
authors = ["Google LLC", "David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2021"

[dependencies]
zzping-lib = { path = "../zzping-lib" }
iced = { version = "0.4", features = ["canvas"] }
iced_native = { version = "0.5" }
async-std = { version = "1.0", features = ["unstable"] }
rand = "0.8"
rmp = "0.8"
ron = "0.7"
clap = { version = "3.1", features = ["derive"] }
serde = "1.0"

