[package]
name = "zzping-lib"
version = "0.2.0-beta1"
authors = ["Google LLC", "David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.9"
chrono = "0.4"
clap = "3.0.0-beta.2"
rustfft = "4.0.0"
huffman-compress = "0.6.0"
bit-vec = "0.6.3"  # for huffman, also for serializing

[profile.dev]
opt-level = 1