[package]
name = "zzping-lib"
version = "0.2.2-beta2"
authors = ["Google LLC", "David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8"
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
rustfft = "6.0"
huffman-compress = "0.6"
bit-vec = "0.6"  # for huffman, also for serializing
anyhow = "1.0"
thiserror = "1.0"