[package]
name = "zzpinglib"
version = "0.1.0"
authors = ["Google LLC", "David Martinez Marti <deavidsedice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8.9"
chrono = "0.4"
clap = "3.0.0-beta.2"

